@@ -1,4 +1,4 @@
-VERSION=0.77.1-20051104
+VERSION=0.77.1-20051201
 THISDIR=branch_0
 
 TOOLSPREFIX=
